# RobArm

./: .gitignore  README.md
robarm_cad/nema17/: second_draft.stl  spur_gear.FCStd
robarm_code/src/robarm_description/config/: joints.yaml
robarm_code/src/robarm_description/launch/: joint_control.perspective  robarm_control.launch  robarm_gazebo.launch  robarm_rviz.launch
robarm_code/src/robarm_description/rviz/: robarm.rviz
robarm_code/src/robarm_description/urdf/: robarm.urdf.xacro
robarm_code/src/robarm_motor_drivers/: CMakeLists.txt
robarm_code/src/robarm_motor_drivers/inc/: DRV8711_driver.h
robarm_code/src/robarm_motor_drivers/src/: DRV8711_driver.cpp  DRV8711_driver_test.cpp
robarm_description/: CMakeLists.txt  package.xml
robarm_description/launch/: robarm_rviz.launch
robarm_description/urdf/: robarm.urdf.xacro
robarm_documents/: partlist.ods  partslist.xlsx
robarm_pcb/kicad_libraries/3dmodels/: ZF5S-40-01-T-WT.stp
robarm_pcb/kicad_libraries/footprints/LD1117DT33TR.pretty/: LD1117DT33TR.kicad_mod
robarm_pcb/kicad_libraries/footprints/motor_driver.pretty/: DRV8886_HTSSOP-24.kicad_mod  EE-SX1071.kicad_mod  FPC_40.kicad_mod  LM2576SX_TO263-5.kicad_mod  PC9685_TSSOP28.kicad_mod  SRR1280A-101M.kicad_mod  TCA9539_TSSOP-24.kicad_mod  picoblade-conn-1.25mm-3pin.kicad_mod  picoblade-conn-1.25mm-4pin.kicad_mod
robarm_pcb/kicad_libraries/symbols/: motor_driver.dcm  motor_driver.lib
robarm_pcb/motor_driver/limit_switch_prj/limit_switch_prj/: fp-info-cache  fp-lib-table  limit_switch_prj v1.stl  limit_switch_prj-cache.lib  limit_switch_prj.kicad_pcb  (+5 more)
robarm_pcb/motor_driver/motor_driver_gerbers/: motor_driver_prj-B_Cu.gbl  motor_driver_prj-B_Mask.gbs  motor_driver_prj-B_Paste.gbp  motor_driver_prj-B_SilkS.gbo  motor_driver_prj-Edge_Cuts.gm1  motor_driver_prj-F_Cu.gtl  motor_driver_prj-F_Mask.gts  motor_driver_prj-F_Paste.gtp  motor_driver_prj-F_SilkS.gto  motor_driver_prj-In1_Cu.g2  motor_driver_prj-In2_Cu.g3  motor_driver_prj-NPTH-drl_map.gbr  motor_driver_prj-NPTH.drl  motor_driver_prj-PTH-drl_map.gbr  motor_driver_prj-PTH.drl
robarm_pcb/motor_driver/motor_driver_prj/: AllDrivers.sch  extConnectors.sch  fp-info-cache  fp-lib-table  motor_connectors.sch  motor_driver_prj-cache.lib  motor_driver_prj.kicad_pcb  motor_driver_prj.net  motor_driver_prj.pro  motor_driver_prj.sch  single_driver.sch  sym-lib-table
(+5 files in other folders)
